clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00087.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00087.c" (c, x86_64-unknown-linux-gnu)
fn foo() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %11 = alloca s32i, "__retval", align 4
        %12 = const 0 : s32i
        store %12, %11
        %13 = load %11 : s32i
        return %13
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_S, "v", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @foo : () -> s32i*
        %4 = cast(bitcast) %3 : (...) -> s32i*
        get_member
        store %4, %5, align 8
        get_member
        %7 = load %6 : (...) -> s32i*, align 8
        %8 = cast(bitcast) %7 : () -> s32i*
        %9 = call () : s32i [all]
        store %9, %0
        %10 = load %0 : s32i
        return %10
}
