clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00088.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00088.c" (c, x86_64-unknown-linux-gnu)
global fptr : (...) -> s32i* = Dialect { dialect: "cir", mnemonic: "ptr", raw: Some("null"), ty: Some(Pointer { pointee: Func { inputs: [], optional_return_type: Some(Named("s32i")), var_arg: true }, addr_space: None }) } [external, default, align 8, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %4 = get_global @fptr : (...) -> s32i**
                %5 = load %4 : (...) -> s32i*, align 8
                %6 = cast(ptr_to_bool) %5 : bool
                if %6 {
                        %7 = const 1 : s32i
                        store %7, %0
                        %8 = load %0 : s32i
                        return %8
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
