clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00092.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00092.c" (c, x86_64-unknown-linux-gnu)
global a : s32i[4] = ConstArray { ty: Array { element_type: Named("s32i"), size: 4 }, elts: Array([CirInt { ty: Named("s32i"), value: "5" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "3" }]), trailing_zeros_num: 0 } [external, default, align 16, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %36 = const 16 : u64i
                %37 = const 4 : u64i
                %38 = const 4 : u64i
                mul
                cmp
                if %40 {
                        %41 = const 1 : s32i
                        store %41, %0
                        %42 = load %0 : s32i
                        return %42
                }
                yield
        }
        scope {
                %28 = const 0 : s64i
                %29 = get_global @a : s32i[4]*
                get_element
                %31 = load %30 : s32i, align 16
                %32 = const 5 : s32i
                cmp
                if %33 {
                        %34 = const 2 : s32i
                        store %34, %0
                        %35 = load %0 : s32i
                        return %35
                }
                yield
        }
        scope {
                %20 = const 1 : s64i
                %21 = get_global @a : s32i[4]*
                get_element
                %23 = load %22 : s32i, align 4
                %24 = const 0 : s32i
                cmp
                if %25 {
                        %26 = const 3 : s32i
                        store %26, %0
                        %27 = load %0 : s32i
                        return %27
                }
                yield
        }
        scope {
                %12 = const 2 : s64i
                %13 = get_global @a : s32i[4]*
                get_element
                %15 = load %14 : s32i, align 8
                %16 = const 2 : s32i
                cmp
                if %17 {
                        %18 = const 4 : s32i
                        store %18, %0
                        %19 = load %0 : s32i
                        return %19
                }
                yield
        }
        scope {
                %4 = const 3 : s64i
                %5 = get_global @a : s32i[4]*
                get_element
                %7 = load %6 : s32i, align 4
                %8 = const 3 : s32i
                cmp
                if %9 {
                        %10 = const 5 : s32i
                        store %10, %0
                        %11 = load %0 : s32i
                        return %11
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
