clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00093.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00093.c" (c, x86_64-unknown-linux-gnu)
global a : s32i[4] = [1, 2, 3, 4] [external, default, align 16, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = const 16 : u64i
        %5 = const 4 : u64i
        %6 = const 4 : u64i
        %7 = mul %5, %6 : u64i
        %8 = cmp ne %4, %7 : bool
        if %8 {
            %9 = const 1 : s32i
            store %9, %0
            %10 = load %0 : s32i
            return %10
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
