clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00096.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00096.c" (c, x86_64-unknown-linux-gnu)
global x : s32i = CirInt { ty: Named("s32i"), value: "3" } [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %7 = get_global @x : s32i*
                %8 = load %7 : s32i, align 4
                %9 = const 3 : s32i
                cmp
                if %10 {
                        %11 = const 0 : s32i
                        store %11, %0
                        %12 = load %0 : s32i
                        return %12
                }
                yield
        }
        %2 = const 0 : s32i
        %3 = get_global @x : s32i*
        store %2, %3, align 4
        %4 = get_global @x : s32i*
        %5 = load %4 : s32i, align 4
        store %5, %0
        %6 = load %0 : s32i
        return %6
}
